--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -1,20 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="co.izuchukwu.usbkit.Home"
-    tools:showIn="@layout/activity_home">
+    tools:showIn="@layout/activity_home"
+    android:orientation="vertical">
 
-    <TextView
+    <Button
+        android:id="@+id/test1Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:text="test 1, find path: getexternalfilesdir [fail]"
+        style="?android:attr/borderlessButtonStyle"
+        android:textColor="@color/colorPrimary"/>
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/test2Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:text="test 2, find device: usbmanager [pass]"
+        style="?android:attr/borderlessButtonStyle"
+        android:textColor="@color/colorPrimary"/>
+
+    <Button
+        android:id="@+id/test3Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:text="test 3, use usbmanager path"
+        style="?android:attr/borderlessButtonStyle"
+        android:textColor="@color/colorPrimary"/>
+
+    <Button
+        android:id="@+id/test4Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:text="test 4, libaums + jnode-fs"
+        style="?android:attr/borderlessButtonStyle"
+        android:textColor="@color/colorPrimary"/>
+
+    <ScrollView
+        android:id="@+id/logScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/logTextView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginTop="32dp"
+            android:paddingBottom="64dp"
+            android:text="readyyy"
+            app:layout_constraintTop_toBottomOf="@id/test1Button" />
+
+    </ScrollView>
+
+</android.support.v7.widget.LinearLayoutCompat>
